--- a/scc-mvc/src/main/resources/templates/login.html
+++ b/scc-mvc/src/main/resources/templates/login.html
@@ -109,7 +109,7 @@
 <body>
 
 <div class="pen-title">
-    <h1><b>Social</b> Customer Care</h1>
+    <h1><b style="color: #178ab4">Social</b> Customer Care</h1>
 </div>
 <!-- Form Module-->
 <div class="module form-module">
