--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -323,7 +323,7 @@
 
         <section class="col-lg-3"
                  style="padding: 0; margin:0px 0px 0px 0px;border-left: 1px solid lightgray; position: relative; height: 100vh;">
-            <div style="border: 1px solid gray; margin-bottom: 20px">
+            <div style="border: 1px solid gray; margin-bottom: 20px; background-color: inherit">
                 <div style="border-radius: 0px">
                     <div style="background-color: white">MESSENGER</div>
                     <!--<span class="glyphicon glyphicon-comment"></span> Messenger-->
@@ -348,12 +348,12 @@
 
                     <div style="padding-bottom: 0px; height: 80vh;  overflow: auto">
                         <ul class="chat">
-                            <li class="left clearfix"><span class="chat-img pull-left"> <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle"/> </span>
+                            <li class="left clearfix"><span class="chat-img pull-left"> <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" /> </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
                                         <strong class="primary-font">Jack Sparrow</strong>
                                         <small class="pull-right text-muted">
-                                            <span class="glyphicon glyphicon-time"></span>12 mins ago
+                                            12 mins ago
                                         </small>
                                     </div>
                                     <p>
@@ -361,12 +361,12 @@
                                     </p>
                                 </div>
                             </li>
-                            <li class="left clearfix"><span class="chat-img pull-left"> <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle"/> </span>
+                            <li class="left clearfix"><span class="chat-img pull-left"> <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/> </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
                                         <strong class="primary-font">Jack Sparrow</strong>
                                         <small class="pull-right text-muted">
-                                            <span class="glyphicon glyphicon-time"></span>12 mins ago
+                                            12 mins ago
                                         </small>
                                     </div>
                                     <p>
@@ -374,12 +374,12 @@
                                     </p>
                                 </div>
                             </li>
-                            <li class="left clearfix"><span class="chat-img pull-left"> <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle"/> </span>
+                            <li class="left clearfix"><span class="chat-img pull-left"> <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/> </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
                                         <strong class="primary-font">Jack Sparrow</strong>
                                         <small class="pull-right text-muted">
-                                            <span class="glyphicon glyphicon-time"></span>12 mins ago
+                                            12 mins ago
                                         </small>
                                     </div>
                                     <p>
@@ -388,51 +388,46 @@
                                 </div>
                             </li>
                             <li class="right clearfix"><span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar" class="img-circle"/>
+                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar" />
                         </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
-                                        <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>13 mins
-                                            ago
+                                        <small class=" text-muted ">13 mins ago
                                         </small>
                                         <strong class="pull-right primary-font">Bhaumik Patel</strong>
                                     </div>
                                     <p>
-                                        Chào bạn, chúng tôi đên tứ
+                                        Chào bạn, chúng tôi đên từ SCC
                                     </p>
                                 </div>
                             </li>
                             <li class="left clearfix"><span class="chat-img pull-left">
-                            <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle"/>
+                            <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar"/>
                         </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
                                         <strong class="primary-font">Jack Sparrow</strong>
                                         <small class="pull-right text-muted">
-                                            <span class="glyphicon glyphicon-time"></span>14 mins ago
+                                            14 mins ago
                                         </small>
                                     </div>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                                        ornare
-                                        dolor, quis ullamcorper ligula sodales.
+                                        Vâng cho mình hỏi thủ tục đổi trả
                                     </p>
                                 </div>
                             </li>
                             <li class="right clearfix"><span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar" class="img-circle"/>
+                            <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="User Avatar"/>
                         </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
-                                        <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>15 mins
+                                        <small class=" text-muted">15 mins
                                             ago
                                         </small>
                                         <strong class="pull-right primary-font">Bhaumik Patel</strong>
                                     </div>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                                        ornare
-                                        dolor, quis ullamcorper ligula sodales.
+                                       Để đổi trả bạn hãy mang đến trung tâm bảo hành gần nhất
                                     </p>
                                 </div>
                             </li>
