--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -323,28 +323,9 @@
 
         <section class="col-lg-3"
                  style="padding: 0; margin:0px 0px 0px 0px;border-left: 1px solid lightgray; position: relative; height: 100vh;">
-            <div style="border: 1px solid gray; margin-bottom: 20px; background-color: inherit">
-                <div style="border-radius: 0px">
-                    <div style="background-color: white">MESSENGER</div>
-                    <!--<span class="glyphicon glyphicon-comment"></span> Messenger-->
-                    <!--<div class="btn-group pull-right">-->
-                    <!--<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">-->
-                    <!--<span class="glyphicon glyphicon-chevron-down"></span>-->
-                    <!--</button>-->
-                    <!--<ul class="dropdown-menu slidedown">-->
-                    <!--<li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-refresh">-->
-                    <!--</span>Refresh</a></li>-->
-                    <!--<li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-ok-sign">-->
-                    <!--</span>Available</a></li>-->
-                    <!--<li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-remove">-->
-                    <!--</span>Busy</a></li>-->
-                    <!--<li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-time"></span>-->
-                    <!--Away</a></li>-->
-                    <!--<li class="divider"></li>-->
-                    <!--<li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-off"></span>-->
-                    <!--Sign Out</a></li>-->
-                    <!--</ul>-->
-                    <!--</div>-->
+            <div style="margin-bottom: 20px; background-color: inherit">
+                <div style="padding: 0 5px 0 5px">
+                    <div style="background-color: white; text-align: center; margin-bottom: 10px; font-size: 20px; font-weight: bold">Jack Sparrow</div>
 
                     <div style="padding-bottom: 0px; height: 80vh;  overflow: auto">
                         <ul class="chat">
